# internship

./: README.md
BMS/: BMS.cpp  BMS.h  BMSCommCenter.cpp  BMSCommCenter.h  BMSServer.cpp  BMSServer.h  BMSWorker.cpp  BMSWorker.h  BMSWorkerFactory.cpp  BMSWorkerFactory.h  CLParser.cpp  CLParser.h  Makefile  Makefile.am  Makefile.in  backup.sh  querylist  s_clustermap.sys  tags  test_run.sh
BMS/.deps/: BMS.Po  BMSCommCenter.Po  BMSHandler.Po  BMSQueryQueue.Po  BMSQueryRewrite.Po  BMSServer.Po  BMSWorker.Po  BMSWorkerFactory.Po  CLParser.Po  communication.Po
BMS/conf/: blender_server.cfg  detail_server.cfg  searcher_server.cfg  sync_conf.sh
BMS/v1/: BMS.cpp  BMS.h  BMSHandler.cpp  BMSHandler.h  README.v1  communication.cpp  communication.h  validation.h
BMS/v2/: BMSCommCenter.cpp  BMSCommCenter.h  BMSQueryQueue.cpp  BMSQueryQueue.h  BMSQueryRewrite.cpp  BMSQueryRewrite.h  BMSServer.cpp  BMSServer.h  BMSWorker.cpp  BMSWorker.h  BMSWorkerFactory.cpp  BMSWorkerFactory.h  validation.h
crawl_ip_filter/: crawl.ip  makedata.py  run.sh  splitip.py  test.sh
crawl_ip_filter/crawl_ip_filter_hash/: test
crawl_ip_filter/crawl_ip_filter_hash/src/: ipfilter.cpp  ipfilter.h  main.cpp
crawl_ip_filter/crawl_ip_filter_inet/: Makefile
crawl_ip_filter/crawl_ip_filter_inet/src/: ipfilter.cpp  ipfilter.h  main.cpp
crawl_ip_filter/crawl_ip_filter_string_hash/src/: ipfilter.cpp  ipfilter.h  main.cpp
crawl_ip_filter/crawl_ip_filter_trie/: description.md  test
crawl_ip_filter/crawl_ip_filter_trie/src/: ipfilter.cpp  ipfilter.h
word_frequency/: Description.md
word_frequency/c++/: Makefile
word_frequency/c++/src/: main.cpp  wfstatistic.cpp  wfstatistic.h
word_frequency/python/: wfstatistic.py
word_frequency/resource/: test1.txt  test2.txt  test3.txt
